git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@5094 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/SMC2009/Spatialization-SMC09.tex
+++ b/Papers/SMC2009/Spatialization-SMC09.tex
@@ -300,20 +300,16 @@ The ICST Ambisonics Tools comprise a set of four externals for Max/MSP \cite{Sch
 
 Jamoma\footnote{\url{http://www.jamoma.org}} is a open-source software\cite{Place:2006jamoma} to facilitate artistic and scientific work with Max/MSP. It consists of a DSP library and a modular framework for structuring patches.
 
+Among others, the modular framework provides a set of popular spatialization algorithms, as there were VBAP \cite{Pulkki:2000vbap_max}, ambisonics \cite{Schacher:2006ambi_max}, ViMiC \cite{CMJ08-VIMIC}, and DBAP \cite{dbapICMC09}, all situated at the \emph{Encoding} and \emph{Decoding Layer} and quickly connectable to a multichannel output module which represents the \emph{Hardware Abstraction Layer} in Figure \ref{fig:layers}. Each module is equipped with a ready-made graphical user interface (\emph{Authoring Layer}) and a standardized OSC-namespace for controlling modules remotely.  
 
-Among others, the modular framework provides a set of popular spatialization algorithms, as there were VBAP \cite{Pulkki:2000vbap_max}, ambisonics \cite{Schacher:2006ambi_max}, ViMiC \cite{CMJ08-VIMIC}, and DBAP \cite{dbapICMC09}, all situated at the \emph{Encoding} and \emph{Decoding Layer} and quickly connectable to a multichannel output module which represents the \emph{Hardware Abstraction Layer} in Figure \ref{fig:layers}. Each module is equipped with a ready-made graphical user interface (\emph{Authoring Layer}) and a standardized OSC-namespace for controlling modules remotely. The definition of the loudspeaker reproduction setup as well as the arrangement of the virtual sound sources is intentionally handled by external control modules and communicated through OSC to the renderer, thus makes it easy to exchange the spatialization algorithm while maintaining the global state.
-       
-\indent Furthermore, a number of spatial effects modules (Doppler, Airfilter, RollOff, Reverb), as well as multichannel recording \& playback modules, and utilities to facilitate the work with multichannel audio are provided, e.g. utilities to compensate for sound-pressure and time-delay in non-equidistant loudspeaker arrangements, or level-meters.
+Since all Jamoma modules are designed with such a standardized OSC namespace, users can rapidly combine or substituted modules to adapt to specific requirements. For example the interoperability with Holo-Edit, ICST Ambimonitor and physical interfaces, such as Jazzmutant's Lemur or TUIO-compliant \cite{kaltenbrunner2005tpt} multitouch devices through MMF\footnote{\url{http://code.google.com/p/mmf}} facilitates the individual control of Jamoma.
+The definition of the loudspeaker reproduction setup as well as the arrangement of the virtual sound sources is intentionally handled by external control modules and communicated through OSC to the renderer, thus makes it easy to exchange the spatialization algorithm while maintaining the global state.
+                             
+Furthermore, a number of spatial effects modules (Doppler, Airfilter, RollOff, Reverb), as well as multichannel recording \& playback modules, and utilities to facilitate the work with multichannel audio are provided, e.g. utilities to compensate for sound-pressure and time-delay in non-equidistant loudspeaker arrangements, or level-meters.                                                                                                               
 
-\indent At present, arrangements with up to 32 discrete loudspeaker-feeds are supported by all spatialization modules. ViMiC and DBAP have been developed as solutions to limitations outlined in section \ref{sec:digital audio workstations - DAW} regarding non-conventional and non-standardized loudspeaker. In particularly, DBAP has been proven to be useful in theaters and sound installation context.
+At present, arrangements with up to 32 discrete loudspeaker-feeds are supported by all spatialization modules. ViMiC and DBAP have been developed as solutions to limitations outlined in section \ref{sec:digital audio workstations - DAW} regarding non-conventional and non-standardized loudspeaker. In particularly, DBAP has been proven to be useful in theaters and sound installation context.
 
-
-%that can be combined and substituted with each other to quickly compare, audition, or adapt each of them to a specific context. 
-Because all modules have been equipped with a standardized OSC namespace, users can rapidly combine or substituted modules in order to adapt to specific requirements. For example the interoperability with Holo-Edit, ICST Ambimonitor and physical interfaces, such as Jazzmutant's Lemur %\footnote{\url{http://www.jazzmutant.com}} 
-or TUIO-compliant \cite{kaltenbrunner2005tpt} multitouch devices through MMF\footnote{\url{http://code.google.com/p/mmf}} facilitates the individual control of Jamoma.
-
-
-Current low-level spatial-systems development in Jamoma is focused on Jamoma Multicore, a coding layer for the creation multichannel audio streams that can be passed between objects in Max/MSP or in Pure Data. These multichannel signals are also dynamic, meaning that the number of channels can be changed instantaneously. % and the audio graph will adapt accordingly.  
+Current low-level spatial-systems development in Jamoma is focused on Jamoma Multicore, a coding layer for the creation multichannel audio streams that can be passed between objects in Max/MSP or in Pure Data. These multichannel signals are also dynamic, meaning that the number of channels can be changed instantaneously. 
 The signals can carry decoded or encoded audio signals such as ambisonics B-format of any order.
  
 \subsection{Holo-Edit}
